force-app/main/default/objects/Account_Location__c/fields/addrline1__c.field-meta.xml
<CustomField>
    <fullName>addrline1__c</fullName>
    <formula>Location__r.addrline1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>