force-app/main/default/objects/Account_Location__c/fields/addrline2__c.field-meta.xml
<CustomField>
    <fullName>addrline2__c</fullName>
    <formula>Location__r.addrline2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Address 1</label>
    <type>Text</type>
</CustomField>