force-app/main/default/objects/Account_Location__c/fields/addrline3__c.field-meta.xml
<CustomField>
    <fullName>addrline3__c</fullName>
    <formula>Location__r.addrline3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Address 2</label>
    <type>Text</type>
</CustomField>