force-app/main/default/objects/Account_Location__c/fields/addrline4_city__c.field-meta.xml
<CustomField>
    <fullName>addrline4_city__c</fullName>
    <formula>LEFT(Location__r.addrline4__c,FIND(&quot; &quot;,Location__r.addrline4__c)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location City</label>
    <type>Text</type>
</CustomField>