force-app/main/default/objects/Account_Location__c/fields/addrline4_state__c.field-meta.xml
<CustomField>
    <fullName>addrline4_state__c</fullName>
    <formula>mid(Location__r.addrline4__c, 26,2)</formula>
    <label>Location State</label>
    <type>Text</type>
</CustomField>