force-app/main/default/objects/Account_Location__c/fields/addrline4_zip__c.field-meta.xml
<CustomField>
    <fullName>addrline4_zip__c</fullName>
    <formula>Location__r.addrline5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Zip</label>
    <type>Text</type>
</CustomField>