force-app/main/default/objects/Account_Location__c/fields/cvoffax1__c.field-meta.xml
<CustomField>
    <fullName>cvoffax1__c</fullName>
    <formula>Location__r.Cvoffax1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Fax-ALobj-cvoffax1</label>
    <type>Text</type>
</CustomField>