force-app/main/default/objects/Account_Location__c/fields/cvofphone1__c.field-meta.xml
<CustomField>
    <fullName>cvofphone1__c</fullName>
    <formula>Location__r.cvofphone1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Phone</label>
    <type>Text</type>
</CustomField>