force-app/main/default/objects/Account_Location__c/fields/External_SFACC_LOC_ID__c.field-meta.xml
<CustomField>
    <fullName>External_SFACC_LOC_ID__c</fullName>
    <externalId>true</externalId>
    <label>External_SFACC_LOC_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>