force-app/main/default/objects/Account_Location__c/fields/External_SFAccountCusNum__c.field-meta.xml
<CustomField>
    <fullName>External_SFAccountCusNum__c</fullName>
    <externalId>true</externalId>
    <label>External_SFAccountCusNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>