force-app/main/default/objects/Account_Location__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFLocationId</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Account_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>