force-app/main/default/objects/Account_Location__c/fields/Location_relatedlistdisplayonly__c.field-meta.xml
<CustomField>
    <fullName>Location_relatedlistdisplayonly__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Location__r.Id, LOCATIONNUM__c)</formula>
    <label>Location Num</label>
    <type>Text</type>
</CustomField>