force-app/main/default/objects/Account_Location__c/fields/LOCATIONNUM__c.field-meta.xml
<CustomField>
    <fullName>LOCATIONNUM__c</fullName>
    <externalId>true</externalId>
    <label>LOCATIONNUM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>