force-app/main/default/objects/Account_Location__c/fields/SFAccountCusNum__c.field-meta.xml
<CustomField>
    <fullName>SFAccountCusNum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>